crates/rome_analyze/tests/specs/noNegationElse.js.snap
---
source: crates/rome_analyze/tests/spec_tests.rs
assertion_line: 97
expression: noNegationElse.js
---
# Input
```js
// valid
if (!true) {consequent;};
true ? consequent : alternate;
// invalid
if (!true) {
  consequent;
} else {
  alternate;
}
!condition ? consequent : alternate;
```

# Diagnostics
```
error[noNegationElse]: Invert blocks when performing a negation test.
  ┌─ noNegationElse.js:5:1
  │  
5 │ ┌ if (!true) {
6 │ │   consequent;
7 │ │ } else {
8 │ │   alternate;
9 │ │ }
  │ └─^ Invert blocks when performing a negation test.

Replace with strict equality
    | @@ -2,9 +2,9 @@
1 1 |   if (!true) {consequent;};
2 2 |   true ? consequent : alternate;
3 3 |   // invalid
4   | - if (!true) {
  4 | + if (true) {
  5 | +   alternate;
  6 | + } else {
5 7 |     consequent;
6   | - } else {
7   | -   alternate;
8 8 |   }
9 9 |   !condition ? consequent : alternate;


```

```
error[noNegationElse]: Invert blocks when performing a negation test.
   ┌─ noNegationElse.js:10:1
   │
10 │ !condition ? consequent : alternate;
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invert blocks when performing a negation test.

Replace with strict equality
      | @@ -7,4 +7,4 @@
 6  6 |   } else {
 7  7 |     alternate;
 8  8 |   }
 9    | - !condition ? consequent : alternate;
    9 | + condition ? alternate : consequent;


```


